     [atomicio.c auth.c dh.c authfile.c buffer.c clientloop.c kex.c]
     [groupaccess.c gss-genr.c kexgexs.c misc.c monitor.c monitor_mm.c]
     [packet.c scp.c serverloop.c session.c sftp-client.c sftp-common.c]
     [sftp-server.c sftp.c ssh-add.c ssh-agent.c ssh-keygen.c sshlogin.c]
     [uidswap.c xmalloc.c]
     move #include <sys/param.h> out of includes.h

20060804
 - (dtucker) [configure.ac] The "crippled AES" test does not work on recent
   versions of Solaris, so use AC_LINK_IFELSE to actually link the test program
   rather than just compiling it.  Spotted by dlg@.

20060802
 - (dtucker) [openbsd-compat/daemon.c] Add unistd.h for fork() prototype.

20060725
 - (dtucker) [openbsd-compat/xmmap.c] Need fcntl.h for O_RDRW.

20060724
 - (djm) OpenBSD CVS Sync
   - jmc@cvs.openbsd.org 2006/07/12 13:39:55
     [sshd_config.5]
      - new sentence, new line
      - s/The the/The/
      - kill a bad comma
   - stevesk@cvs.openbsd.org 2006/07/12 22:28:52
     [auth-options.c canohost.c channels.c includes.h readconf.c]
     [servconf.c ssh-keyscan.c ssh.c sshconnect.c sshd.c]
     move #include <netdb.h> out of includes.h; ok djm@
   - stevesk@cvs.openbsd.org 2006/07/12 22:42:32
     [includes.h ssh.c ssh-rand-helper.c]
     move #include <stddef.h> out of includes.h
   - stevesk@cvs.openbsd.org 2006/07/14 01:15:28
     [monitor_wrap.h]
     don't need incompletely-typed 'struct passwd' now with
     #include <pwd.h>; ok markus@
   - stevesk@cvs.openbsd.org 2006/07/17 01:31:10
     [authfd.c authfile.c channels.c cleanup.c clientloop.c groupaccess.c]
     [includes.h log.c misc.c msg.c packet.c progressmeter.c readconf.c]
     [readpass.c scp.c servconf.c sftp-client.c sftp-server.c sftp.c]
     [ssh-add.c ssh-agent.c ssh-keygen.c ssh-keyscan.c ssh-keysign.c ssh.c]
     [sshconnect.c sshlogin.c sshpty.c uidswap.c]
     move #include <unistd.h> out of includes.h
   - dtucker@cvs.openbsd.org 2006/07/17 12:02:24
     [auth-options.c]