@@ -1,4 +1,4 @@
-/* $OpenBSD: log.c,v 1.35 2006/07/22 20:48:23 stevesk Exp $ */
+/* $OpenBSD: log.c,v 1.36 2006/07/26 13:57:17 stevesk Exp $ */
 /*
  * Author: Tatu Ylonen <ylo@cs.hut.fi>
  * Copyright (c) 1995 Tatu Ylonen <ylo@cs.hut.fi>, Espoo, Finland
@@ -37,6 +37,7 @@
 #include "includes.h"
 
 #include <stdarg.h>
+#include <stdlib.h>
 #include <string.h>
 #include <syslog.h>
 #include <unistd.h>
