@@ -1,4 +1,4 @@
-/* $OpenBSD: misc.c,v 1.61 2006/07/26 02:35:17 stevesk Exp $ */
+/* $OpenBSD: misc.c,v 1.62 2006/07/26 13:57:17 stevesk Exp $ */
 /*
  * Copyright (c) 2000 Markus Friedl.  All rights reserved.
  * Copyright (c) 2005,2006 Damien Miller.  All rights reserved.
@@ -32,6 +32,7 @@
 #include <sys/param.h>
 
 #include <stdarg.h>
+#include <stdlib.h>
 #include <string.h>
 #include <unistd.h>
 
