@@ -1,4 +1,4 @@
-/* $OpenBSD: packet.c,v 1.139 2006/07/26 02:35:17 stevesk Exp $ */
+/* $OpenBSD: packet.c,v 1.140 2006/07/26 13:57:17 stevesk Exp $ */
 /*
  * Author: Tatu Ylonen <ylo@cs.hut.fi>
  * Copyright (c) 1995 Tatu Ylonen <ylo@cs.hut.fi>, Espoo, Finland
@@ -53,6 +53,7 @@
 
 #include <errno.h>
 #include <stdarg.h>
+#include <stdlib.h>
 #include <string.h>
 #include <unistd.h>
 
