@@ -1,4 +1,4 @@
-/* $OpenBSD: sftp.c,v 1.88 2006/07/26 02:35:17 stevesk Exp $ */
+/* $OpenBSD: sftp.c,v 1.89 2006/07/26 13:57:17 stevesk Exp $ */
 /*
  * Copyright (c) 2001-2004 Damien Miller <djm@openbsd.org>
  *
@@ -37,6 +37,7 @@
 typedef void EditLine;
 #endif
 #include <signal.h>
+#include <stdlib.h>
 #include <string.h>
 #include <unistd.h>
 
